// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render alt - value[0] 1`] = `
<img
  alt="This is the alt"
  className="{\\"style\\":[{\\"outline\\":\\"none\\"},null]}"
  data-testid="alt"
  id="alt"
  onClick={[Function]}
  src="https://docs.lowdefy.com/public/logo-light-theme.png"
/>
`;

exports[`Render alt - value[0] 2`] = `
<img
  className="{\\"style\\":[{\\"outline\\":\\"none\\"},null]}"
  crossorigin="anonymous"
  data-testid="alt"
  id="alt"
  onClick={[Function]}
  src="https://docs.lowdefy.com/public/logo-light-theme.png"
/>
`;

exports[`Render decoding - value[0] 1`] = `
<img
  className="{\\"style\\":[{\\"outline\\":\\"none\\"},null]}"
  data-testid="decoding"
  decoding="sync"
  id="decoding"
  onClick={[Function]}
  src="https://docs.lowdefy.com/public/logo-light-theme.png"
/>
`;

exports[`Render default - value[0] 1`] = `
<img
  className="{\\"style\\":[{\\"outline\\":\\"none\\"},null]}"
  data-testid="default"
  id="default"
  onClick={[Function]}
/>
`;

exports[`Render height - value[0] 1`] = `
<img
  className="{\\"style\\":[{\\"outline\\":\\"none\\"},null]}"
  data-testid="height"
  height={30}
  id="height"
  onClick={[Function]}
  src="https://docs.lowdefy.com/public/logo-light-theme.png"
/>
`;

exports[`Render loading - value[0] 1`] = `
<img
  className="{\\"style\\":[{\\"outline\\":\\"none\\"},null]}"
  data-testid="loading"
  id="loading"
  loading="lazy"
  onClick={[Function]}
  src="https://docs.lowdefy.com/public/logo-light-theme.png"
/>
`;

exports[`Render onClick - value[0] 1`] = `
<img
  className="{\\"style\\":[{\\"outline\\":\\"none\\",\\"cursor\\":\\"pointer\\"},null]}"
  data-testid="onClick"
  id="onClick"
  onClick={[Function]}
  src="https://docs.lowdefy.com/public/logo-light-theme.png"
/>
`;

exports[`Render sizes - value[0] 1`] = `
<img
  className="{\\"style\\":[{\\"outline\\":\\"none\\"},null]}"
  data-testid="sizes"
  id="sizes"
  onClick={[Function]}
  sizes="20px"
  src="https://docs.lowdefy.com/public/logo-light-theme.png"
/>
`;

exports[`Render src - value[0] 1`] = `
<img
  className="{\\"style\\":[{\\"outline\\":\\"none\\"},null]}"
  data-testid="src"
  id="src"
  onClick={[Function]}
  src="https://docs.lowdefy.com/public/logo-light-theme.png"
/>
`;

exports[`Render srcset - value[0] 1`] = `
<img
  className="{\\"style\\":[{\\"outline\\":\\"none\\"},null]}"
  data-testid="srcset"
  id="srcset"
  onClick={[Function]}
  src="https://docs.lowdefy.com/public/logo-light-theme.png"
  srcset="https://docs.lowdefy.com/public/logo-dark-theme.png"
/>
`;

exports[`Render style - value[0] 1`] = `
<img
  className="{\\"style\\":[{\\"outline\\":\\"none\\"},{\\"border\\":\\"1px solid red\\"}]}"
  data-testid="style"
  id="style"
  onClick={[Function]}
  src="https://docs.lowdefy.com/public/logo-light-theme.png"
/>
`;

exports[`Render width - value[0] 1`] = `
<img
  className="{\\"style\\":[{\\"outline\\":\\"none\\"},null]}"
  data-testid="width"
  height={10}
  id="width"
  onClick={[Function]}
  src="https://docs.lowdefy.com/public/logo-light-theme.png"
/>
`;

exports[`Test Schema alt 1`] = `true`;

exports[`Test Schema alt 2`] = `null`;

exports[`Test Schema alt 3`] = `true`;

exports[`Test Schema alt 4`] = `null`;

exports[`Test Schema decoding 1`] = `true`;

exports[`Test Schema decoding 2`] = `null`;

exports[`Test Schema default 1`] = `true`;

exports[`Test Schema default 2`] = `null`;

exports[`Test Schema height 1`] = `true`;

exports[`Test Schema height 2`] = `null`;

exports[`Test Schema loading 1`] = `true`;

exports[`Test Schema loading 2`] = `null`;

exports[`Test Schema onClick 1`] = `true`;

exports[`Test Schema onClick 2`] = `null`;

exports[`Test Schema sizes 1`] = `true`;

exports[`Test Schema sizes 2`] = `null`;

exports[`Test Schema src 1`] = `true`;

exports[`Test Schema src 2`] = `null`;

exports[`Test Schema srcset 1`] = `true`;

exports[`Test Schema srcset 2`] = `null`;

exports[`Test Schema style 1`] = `true`;

exports[`Test Schema style 2`] = `null`;

exports[`Test Schema width 1`] = `true`;

exports[`Test Schema width 2`] = `null`;
